# hindi2spotify

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  main.py  matcher.py  normalizer.py  playlist.py  pyproject.toml  setup_auth.py  song_cache.json
.claude/: settings.local.json
.github/workflows/: update.yml
scrapers/: __init__.py  gaana.py  jiosaavn.py
